--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<p>Hello Testing</p>
+<section id="hero-area" class="header-area header-eight">
+        <i class="header-bg" style="background-image: url({{ url('frontend/assets/images/top-bg-vector.svg') }});"></i>
+        <div class="container">
+            <div class="row align-items-end">
+                <div class="col-lg-6 col-md-12 col-12 p-0">
+                    <div class="header-content">
+                        <h1>Is Your Application Safe from Hidden Software Vulnerabilities?</h1>
+                        <p class="mb-5">
+                            Outdated or vulnerable software packages can be a gateway for cyberattacks, data leaks, and system compromise. Run a Free Basic Vulnerability Assessment to uncover risks in your tech stack. Identify exposed dependencies, insecure libraries, unpatched components, and other critical weaknesses—before attackers exploit them.
+                             Secure your application now—don't leave it to chance.
+                        </p>
+                        <a href="" target="_blank" class="header-btn">Github Link</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-12 d-md-flex justify-content-end">
+                    <div class="header-image  d-lg-flex justify-content-end">
+                        <img class="header-banner-image" src="{{ url('frontend/assets/images/git_page_banner.svg') }}" alt="banner" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
